add countdown endpoint
