# backend/codegen/src/main/java/eu/raweceek/codegen/api/SessionsApi.java
@@ -1,11 +1,12 @@
 /**
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (7.10.0-SNAPSHOT).
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (7.12.0-SNAPSHOT).
  * https://openapi-generator.tech
  * Do not edit the class manually.
  */
 package eu.raweceek.codegen.api;
 
 import eu.raweceek.codegen.models.SessionDto;
+import eu.raweceek.codegen.models.SessionsCountdownGet200Response;
 import io.swagger.v3.oas.annotations.ExternalDocumentation;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
@@ -32,10 +33,36 @@ import java.util.Map;
 import java.util.Optional;
 import jakarta.annotation.Generated;
 
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", comments = "Generator version: 7.10.0-SNAPSHOT")
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", comments = "Generator version: 7.12.0-SNAPSHOT")
 @Validated
-@Tag(name = "Session", description = "the Session API")
+@Tag(name = "sessions", description = "the sessions API")
 public interface SessionsApi {
+
+    /**
+     * GET /sessions/countdown
+     *
+     * @return Countdown until the next session by startTime (status code 200)
+     *         or Next session not found (status code 404)
+     */
+    @Operation(
+        operationId = "sessionsCountdownGet",
+        responses = {
+            @ApiResponse(responseCode = "200", description = "Countdown until the next session by startTime", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = SessionsCountdownGet200Response.class))
+            }),
+            @ApiResponse(responseCode = "404", description = "Next session not found")
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.GET,
+        value = "/sessions/countdown",
+        produces = { "application/json" }
+    )
+    
+    ResponseEntity<SessionsCountdownGet200Response> sessionsCountdownGet(
+        
+    );
+
 
     /**
      * GET /sessions
@@ -44,7 +71,6 @@ public interface SessionsApi {
      */
     @Operation(
         operationId = "sessionsGet",
-        tags = { "Session" },
         responses = {
             @ApiResponse(responseCode = "200", description = "List of upcoming sessions", content = {
                 @Content(mediaType = "application/json", array = @ArraySchema(schema = @Schema(implementation = SessionDto.class)))
@@ -70,7 +96,6 @@ public interface SessionsApi {
      */
     @Operation(
         operationId = "sessionsNextGet",
-        tags = { "Session" },
         responses = {
             @ApiResponse(responseCode = "200", description = "Next session by startTime", content = {
                 @Content(mediaType = "application/json", schema = @Schema(implementation = SessionDto.class))
