# backend/codegen/src/main/java/eu/raweceek/codegen/models/CountdownDto.java
@@ -1,0 +1,119 @@
+package eu.raweceek.codegen.models;
+
+import java.net.URI;
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import org.springframework.lang.Nullable;
+import java.time.OffsetDateTime;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
+import io.swagger.v3.oas.annotations.media.Schema;
+
+
+import java.util.*;
+import jakarta.annotation.Generated;
+
+/**
+ * CountdownDto
+ */
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", comments = "Generator version: 7.12.0-SNAPSHOT")
+public class CountdownDto {
+
+  private Double value = null;
+
+  private String unit;
+
+  public CountdownDto() {
+    super();
+  }
+
+  /**
+   * Constructor with only required parameters
+   */
+  public CountdownDto(Double value, String unit) {
+    this.value = value;
+    this.unit = unit;
+  }
+
+  public CountdownDto value(Double value) {
+    this.value = value;
+    return this;
+  }
+
+  /**
+   * Get value
+   * @return value
+   */
+  @NotNull 
+  @Schema(name = "value", example = "3.95", requiredMode = Schema.RequiredMode.REQUIRED)
+  @JsonProperty("value")
+  public Double getValue() {
+    return value;
+  }
+
+  public void setValue(Double value) {
+    this.value = value;
+  }
+
+  public CountdownDto unit(String unit) {
+    this.unit = unit;
+    return this;
+  }
+
+  /**
+   * Get unit
+   * @return unit
+   */
+  @NotNull 
+  @Schema(name = "unit", example = "ceeks", requiredMode = Schema.RequiredMode.REQUIRED)
+  @JsonProperty("unit")
+  public String getUnit() {
+    return unit;
+  }
+
+  public void setUnit(String unit) {
+    this.unit = unit;
+  }
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    CountdownDto countdownDto = (CountdownDto) o;
+    return Objects.equals(this.value, countdownDto.value) &&
+        Objects.equals(this.unit, countdownDto.unit);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(value, unit);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class CountdownDto {\n");
+    sb.append("    value: ").append(toIndentedString(value)).append("\n");
+    sb.append("    unit: ").append(toIndentedString(unit)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
+
