# backend/service/src/main/java/eu/raweceek/service/session/controller/SessionController.java
@@ -2,6 +2,8 @@ package eu.raweceek.service.session.controller;
 
 import eu.raweceek.codegen.api.SessionsApi;
 import eu.raweceek.codegen.models.SessionDto;
+import eu.raweceek.codegen.models.SessionsCountdownGet200Response;
+import eu.raweceek.service.session.service.CountdownService;
 import eu.raweceek.service.session.service.SessionService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
@@ -14,13 +16,24 @@ public class SessionController implements SessionsApi {
   @Autowired
   private SessionService sessionService;
 
+  @Autowired
+  private CountdownService countdownService;
+
   @Override
   public ResponseEntity<List<SessionDto>> sessionsGet() {
-    return ResponseEntity.ok(sessionService.getEvents());
+    return ResponseEntity.ok(sessionService.getSessions());
   }
 
   @Override
   public ResponseEntity<SessionDto> sessionsNextGet() {
-    return ResponseEntity.ok(sessionService.nextEvent());
+    return ResponseEntity.ok(sessionService.nextSession());
+  }
+
+  @Override
+  public ResponseEntity<SessionsCountdownGet200Response> sessionsCountdownGet() {
+    var sessionDto = sessionService.nextSession();
+    var countdowns = countdownService.calculateRemainingTime(sessionDto);
+
+    return ResponseEntity.ok(new SessionsCountdownGet200Response().session(sessionDto).countdowns(countdowns));
   }
 }
